# nlp

./: .gitignore  README.md  pyproject.toml
projects/bert-qa-ja/: Dockerfile  README.md  build-dev.sh  build-prod.sh  entrypoint.sh  pyproject.toml
projects/bert-qa-ja/bert_qa_ja/: run_qa.py  trainer_qa.py  utils_qa.py
projects/bert-qa-ja/tests/: test_bert_qa_ja.py
projects/wp-synonyms/: README.md  pyproject.toml
