[tool.poetry]
name = "bert-qa-ja"
version = "0.1.0"
description = ""
authors = ["Risa Nishiyama <lisa.nishiyama@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
torch = "^1.9.0"
transformers = {extras = ["ja"], version = "~4.8.2"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.6b0"
flake8 = "^3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
