[tool.poetry]
name = "wp_synonyms"
version = "0.1.0"
description = "Create synonym dictionaries from Wikipedia redirect links"
authors = ["Risa Nishiyama <lisa.nishiyama@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
black = "^21.5b1"
flake8 = "^3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
